# docs

./: .gitignore  .pre-commit-config.yaml  .prettierrc  404.html  Gemfile  OBSIDIAN_SETUP.md  Prisma.md  README.md  _config.yml  app.manifest.yaml  devices.txt  index.html  index.md  mdx-components.js  mkdocs.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  pyproject.toml  requirements.txt  styles.css  tailwind.config.js  theme.config.jsx  tsconfig.json  vercel.json  video_list.txt
.api/: api.json
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  hotkeys.json  publish.json  templates.json  workspace.json  workspaces.json
Glossary/: Action-Learning Journeys.md  Bioregion.md  Capacity-Building.md  Collaborative Innovation Intensives.md  Developmental Evaluation.md  Enactment.md  Living Lab.md  Narrative.md  Practice.md  Process Design Collective.md  Regenerative Finance.md  Self-Organising.md
Market/: BioFi Project.md  Edge City.md  RadicalXChange.md
Methodology/: Summary.md
Scripts/: mdformat_obsidian.py  setup.bat  setup.sh  strip_frontmatter.py
Team/: Delfina Terrado.md  Mercy Fordwoo.md  Ryah Chandler.md  Shikhar Argawal.md  Tobias Fechner.md
Tech/: Speech-to-Currency.md  Telegram Bots.md  Telegram.md
_layouts/: default.html
app/: layout.tsx  not-found.jsx
components/: ActiveJourneyDisplay.tsx  AppCard.tsx  AppGrid.tsx  AspectsBaseSvg.tsx  AspectsWithPrisma.tsx  AwesomeBikesTeamCards.tsx  CasePreview.tsx  ChatEntriesList.tsx  ChatRAG.tsx  CohortCards.tsx  ContributorChart.tsx  Input.tsx  (+36 more)
(+1485 files in other folders)
