[tool.poetry]
name = "prisma-docs"
version = "0.1.0"
description = "Documentation for prisma events, plus a bit of python code for managing the repo and streamlining contributions."
authors = ["Tobias Fechner <tobias.fechner@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-rss-plugin = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
